removing width 100% to fix squished bug

--- a/main.css
+++ b/main.css
@@ -605,10 +605,6 @@ hr {
         width: 85%;
     }
 
-    .bio-pic {
-        width: 100%;
-    }
-    
     .bio-name-text {
         width: 100%;
     }
